# vexic

./: .codex-review-306.txt  .dockerignore  .gitignore  .gitleaks.toml  .tmp_ro_guard_probe.py  .tmp_wal_probe.py  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW.md  SECURITY.md  host_live_adapter.py  longmemeval_s_smoke.jsonl  pyproject.toml  tmp_audit_out.txt
.claude/: settings.json
.claude/hooks/: check_branch_sync.py  check_doc_drift.py  check_write_target.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-hosted.yml  dream-cron.yml  publish-pypi.yml  turso-backup.yml
.superpowers/sdd/: task-1-report.md
adapters/: hosted_control_plane_http.py  openai_live_adapter.py  openrouter_live_adapter.py  turso_adapter.py
console/: .env.example  README.md  package-lock.json  package.json  proxy.ts  tsconfig.json
console/app/: globals.css  layout.tsx  page.tsx
console/components/: ambient-canvas.tsx  clerk-theme-provider.tsx  event-history-card.tsx  theme-toggle.tsx
console/lib/: auth.ts  clerk-config.ts  clerk-theme.mjs  console-routes.mjs  console-ui-state.mjs  control-plane-api.mjs  control-plane-client.mjs  control-plane-store.mjs
console/tests/: console-ops.test.mjs  console-ui-state.test.mjs  control-plane-api.test.mjs  control-plane-client.test.mjs  route-set.test.mjs  sign-in-page.test.mjs
docs/: README.md  agent-runbook.md  architecture.md  branch-sync.md  configuration.md  examples.md  hosted-mvp.md  memory-service-contract.md  provenance.md  usage.md
docs/adr/: 0001-product-and-agent-integration-surfaces.md  0005-hosted-v1-memory-storage.md  README.md  (+37 more)
npm/: README.md  package.json
pypi/: README.md  pyproject.toml
scripts/: _audit_no_shell.py  _audit_pure.py  ablate_extraction_prompts.py  ablate_light_time_context.py  check_branch_sync.py  check_doc_drift.py  check_docs_ascii.py  check_release_tag.py  check_write_target.py  import-claude-code-jsonl.py  live_retrieval_baseline.py  oracle_evidence_experiment.py  probe_class3_gaps.py  release_audit_dump.sh  replay_deep_backlog.py  run_evals.py  simulate_mentioned_at_promotion.py  turso_restore_drill.py  vexic-mcp-stdio.py
src/: vexic_hosted_http.py  vexic_hosted_local.py
tests/: test_ablate_extraction_prompts.py  test_ablate_light_time_context.py  test_check_branch_sync_hook.py  test_check_doc_drift.py  test_check_write_target_hook.py  test_ci_quality_gates.py  test_claude_code_jsonl_importer.py  test_claude_code_recorder_cli.py  test_claude_code_recorder_cursor.py  test_claude_code_recorder_shared.py  test_cli_dispatch.py  test_console_clerk_config.py  test_console_next_env.py  test_console_ops_depth.py  test_console_project_list.py  test_content_codec.py  test_contract_import.py  test_control_plane_libsql.py  test_control_plane_migrations.py  test_control_plane_target_wiring.py  test_dockerfile.py  test_dream_error_policy.py  test_error_reporting.py  test_fs_permissions.py  test_host_live_adapter.py  test_hosted_control_plane_audit.py  test_hosted_control_plane_tombstones.py  test_hosted_http.py  test_hosted_prime.py  test_hosted_service.py  test_hosted_sweeper.py  test_hosted_turso_backend.py  test_lazy_imports.py  test_libsql_portability.py  test_live_retrieval_baseline.py  test_local_service.py  test_longmemeval_analysis.py  test_longmemeval_eval.py  test_longmemeval_rescore.py  test_mcp_connect.py  (+43 more)
website/: .gitignore  DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json
(+155 files in other folders)
