[project]
name = "vexic"
version = "0.1.0"
description = "Provenance-first memory core for long-running agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai==1.84.1",
    "sqlite-vec>=0.1.9",
]

[project.urls]
Repository = "https://github.com/PyroDonkey/vexic"
Issues = "https://github.com/PyroDonkey/vexic/issues"

[project.optional-dependencies]
hosted = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
