[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vexic"
version = "0.1.0"
description = "Provenance-first memory core for long-running agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "PyroDonkey" }]
keywords = ["memory", "agents", "llm", "mcp", "sqlite", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic-ai==1.102.0",
    "sqlite-vec>=0.1.9",
]

[project.urls]
Homepage = "https://vexic.dev"
Repository = "https://github.com/PyroDonkey/vexic"
Issues = "https://github.com/PyroDonkey/vexic/issues"
Changelog = "https://github.com/PyroDonkey/vexic/blob/main/CHANGELOG.md"

[project.scripts]
vexic = "vexic.cli:main"

[project.optional-dependencies]
local-embed = [
    "fastembed>=0.7.0",
]
hosted = [
    "fastapi>=0.138.0",
    "libsql>=0.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "libsql>=0.1.0",
    "pytest>=9.0.3",
    "ruff>=0.14.9",
    "uvicorn[standard]>=0.49.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vexic"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "scripts",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [
    "turso: live tests that require TURSO_DATABASE_URL + TURSO_AUTH_TOKEN and the libsql extra",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
ignore = [
    # The project rule requires annotations; it does not ban intentionally
    # dynamic host-port/plugin boundaries.
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
